<resources>
    <string name="app_name">StudentScoreDBApp</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="add_subject">Add New Subject</string>
    <string name="delete_subject_by_name">Delete Subject\nby Name</string>
    <string name="update_subject_by_name">Update Subject\nby Name</string>
    <string name="print_all_subjects">Display Subjects</string>
    <string name="subjects_n">Subjects:\n</string>
    <string name="delete_database">Delete Database</string>
    <string name="enter_subject_score">Enter Subject Score</string>
</resources>