<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#632E2E"
    android:backgroundTint="#DDFFFC"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- Edit text to enter name -->
    <EditText
        android:id="@+id/etSubjectName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/enter_subject_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp" />
    <!-- Edit text to enter score -->
    <EditText
        android:id="@+id/etSubjectScore"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/enter_subject_score"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp" />
    <!-- Button to add Subject -->
    <Button
        android:id="@+id/btnAddSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#02655C"
        android:text="@string/add_subject"
        android:textAllCaps="false"
        android:textColor="#F1FFFE"
        android:textSize="20sp" />

    <!-- Button to delete Subject by name -->
    <Button
        android:id="@+id/btnDeleteSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#02655C"
        android:text="@string/delete_subject_by_name"
        android:textAllCaps="false"
        android:textColor="#F1FFFE"
        android:textSize="20sp" />
    <!-- Button to update Subject score by name-->
    <Button
        android:id="@+id/btnUpdateSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#02655C"
        android:text="@string/update_subject_by_name"
        android:textAllCaps="false"
        android:textColor="#F1FFFE"
        android:textSize="20sp" />
    <!-- Button to print Subjects -->
    <Button
        android:id="@+id/btnPrintSubjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#02655C"
        android:text="@string/print_all_subjects"
        android:textAllCaps="false"
        android:textColor="#F1FFFE"
        android:textSize="20sp" />
    <!-- Button to delete DB -->
    <Button
        android:id="@+id/btnDeleteDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#044C46"
        android:text="@string/delete_database"
        android:textColor="#F86156"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Text view: Id, Name, Score -->
        <TextView
            android:id="@+id/tvSubjectRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="10sp"
            android:text="@string/subjects_n"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>